# fonoweb

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
fonoweb/: asgi.py  settings.py  urls.py  wsgi.py
fonoweb/bases/: COLETIVO_TIPO.csv  FONOGRAMA_COLETIVO.csv  ISRC_agregadora_tb.csv  ISRC_arranjo_tb.csv  ISRC_categoria_tb.csv  ISRC_contato_tb.csv  ISRC_endereco_tb.csv  ISRC_fono_titular_instru_tb.csv  ISRC_genero_tb.csv  ISRC_grupo_instrumento_tb.csv  ISRC_instrumento_tb.csv  ISRC_pacote_tb.csv  ISRC_pais_grupo_tb.csv  ISRC_pais_tb.csv  ISRC_parametro_tb.csv  ISRC_sociedade_tb.csv  ISRC_sq_objeto_tb.csv  ISRC_telefone_tb.csv  ISRC_tipo_fonograma_tb.csv  ISRC_tipo_midia_tb.csv  ISRC_uf_tb.csv  dump.py  isrc_controle_exportacao_tb.csv  isrc_dados_exportacao_tb.csv
fonoweb/core/: admin.py  apps.py  models.py  views.py
fonoweb/core/migrations/: 0001_initial.py
fonoweb/docs/: Manual do SISRC for Windows v2_0.doc  instructions.md  manualISRC.doc
